overflow issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -2,6 +2,7 @@
 
 	height: 175px;
 	/*width: auto;*/
+	overflow: hidden;
 }
 body{
 	overflow: hidden;
